# sing-box-whitelist-ruleset

./: .gitignore  LICENSE  README.md  cn-dns-and-ip-list.srs  cn-domains.srs  cn-ip-cidr.json  cn-ip-cidr.srs  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto-update.yml
dns_rules_converter/: __init__.py  main.py
src/dns_rules_converter/: cli.py
src/dns_rules_converter/converters/: dns_converter.py  ip_converter.py
src/dns_rules_converter/utils/: network.py
